--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candy_Calculator</title>
     <link rel="stylesheet" href="style.css">
-     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+     <link rel="icon" type="image/x-icon" href="calculator-icon_34473.ico">
 </head>
 <body>
 
